fix(ProjectPageFallback): fix squished columns

--- a/src/Components/ProjectPageFallback/index.scss
+++ b/src/Components/ProjectPageFallback/index.scss
@@ -104,7 +104,7 @@
     }
     .credits {
       display: grid;
-      grid-template-columns: auto 1fr;
+      grid-template-columns: repeat(2,1fr);
       grid-gap: 40px;
       @media(max-width: 1080px) {
         grid-template-columns: 1fr;
